
[project]
name = "synthesis_selfprotocol"
version = "0.1.0"
description = "A privacy-preserving human verification layer that must approve high-impact agent actions before any treasury or exchange workflow is planned."
readme = "README.md"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.13"
